--- a/index.html
+++ b/index.html
@@ -49,8 +49,46 @@
 
         </h1>
         <h4>U góry znajduje się menu po naciśnięciu danego zadania rozwinie się lista z rozwiązanymi tematami. <br> 
-             </h4>
-           amet consectetur adipisicing elit. Alias eos dolore inventore voluptatum atque deleniti, exercitationem fugit modi numquam? Fuga consequuntur id sed numquam rem? Necessitatibus, pariatur. Optio, distinctio molestias.</p>
+        </h4>
+        <h4>Tutaj znajdują się liniki z użytych materiałów:</h4>
+        <p id="linki">
+            https://ekartkazwarszawy.pl/kartka/kapitulacja-warszawy/ <br>
+            https://www.tygodnikpowszechny.pl/warszawski-wrzesien-39-160198 <br>
+            http://www.1939.pl/przed-wybuchem-wojny/pakt-ribbentrop-molotov/index.html <br>
+            https://wielkahistoria.pl/dlaczego-niemcy-zaatakowaly-zwiazek-radziecki-w-1941-roku-ten-powod-mial-w-rzeczywistosci-drugorzedne-znaczenie/ <br>
+            https://muzeumwp.pl/timeline/pakt-ribbentrop-molotow/ <br>
+            https://1wrzesnia39.pl/39p/materialy-archiwalne/fotografie/8834,Sowieci-w-Polsce.html <br>
+            https://pl.wikipedia.org/wiki/Obrona_Wilna_%281939%29 <br>
+            https://dzieje.pl/aktualnosci/potencjaly-bojowe-niemiec-i-zsrr-22-czerwca-1941-roku <br>
+            https://wielkahistoria.pl/operacja-barbarossa-rzadkie-niemieckie-zdjecia-z-inwazji-na-zwiazek-radziecki-w-1941-roku/ <br>
+            https://warhist.pl/kampanie/kampania-radziecka-operacja-barbarossa-wersja-rozszerzona/ <br>
+            https://www.facebook.com/photo.php?fbid=285579734957701&id=195623607286648&set=a.201338936715115&locale=pl_PL <br>
+            https://wiekdwudziesty.pl/operacja-barbarossa/ <br>
+            https://historia.org.pl/2022/04/14/bitwa-na-luku-kurskim-najwieksza-bitwa-pancerna-w-dziejach-wojen/ <br>
+            https://www.polskieradio.pl/39/156/artykul/3232138,jakie-straty-poniosla-polska-w-czasie-niemieckiej-okupacji-skutki-ii-wojny-swiatowej-polska-odczuwa-do-dzis <br>
+            https://www.polskieradio.pl/39/156/artykul/359167,dachau-pieklo-ponad-dwustu-tysiecy-wiezniow <br>
+            https://pl.wikipedia.org/wiki/Sztandar_nad_Reichstagiem <br>
+            https://pl.freepik.com/premium-zdjecie/pomnik-wolania-ojczyzny-w-wolgogradzie-wolgograd-to-miasto-w-europejskiej-czesci-rosji-miasto-bohaterow-miejsce-bitwy-pod-stalingradem_21415879.htm <br>
+            https://www.wprost.pl/kraj/10014202/muzeum-powstania-warszawskiego-nie-chce-apelu-smolenskiego.html <br>
+            https://warszawa.wyborcza.pl/warszawa/7,54420,31183189,80-rocznica-powstania-warszawskiego-mnostwo-wydarzen-w-calym.html <br>
+            https://dzieje.pl/wiadomosci/brytyjczyk-odbudowujacy-spitfirea-na-ktorym-walczyli-polscy-lotnicy-zawsze-bedziemy-im <br>
+            https://ipn.gov.pl/pl/aktualnosci/71197,Walki-o-Monte-Cassino-fotografie-z-Archiwum-IPN.html <br>
+            https://odkrywca.pl/breda-generala-maczka/ <br>
+            https://muzeumlotnictwa.pl/wystawy/1-samodzielna-brygada-spadochronowa-w-operacji-market-garden-1944/ <br>
+            http://www.sppw1944.org/index.html?http://www.sppw1944.org/powstanie/przyczolek.html <br>
+            https://tyflomapy.pl/10__Ustalenie_granic_Polski_po_II_wojnie_swiatowej_1940-1945_.html <br>
+            https://podziemiezbrojne.ipn.gov.pl/zol/historia/do-las/87921,Do-lasu.html <br>
+            https://kedyw.pl/index.php/2024/02/14/15520/ <br>
+            https://terazhistoria.pl/zamach-na-franza-kutschere/ <br> 
+            https://go2warsaw.pl/powstanie-warszawskie/ <br>
+            https://wyborcza.pl/alehistoria/7,121681,30342211,rozstrzeliwanie-warszawy-plan-eksterminacji-polakow-jako.html <br>
+            https://przystanekhistoria.pl/pa2/tematy/obozy-koncentracyjne/78208,Oswobadzanie-niemieckich-obozow-koncentracyjnych-przez-wojska-sowieckie.html <br>
+            http://www.majdanek.com.pl/obozy/majdanek/odziez_wiezniarska.html <br>
+            https://pl.dreamstime.com/zdj%C4%99cia-stock-ruiny-komora-gazowa-w-auschwitz-ii-birkenau-image33174923 <br>
+            https://www.1944.pl/fototeka/kolekcja/niemieckie-zdjecia-po-kapitulacji-powstania-pa,162/17052.html <br>
+            https://przystanekhistoria.pl/pa2/tematy/witold-pilecki/54631,Pieklo-po-niemiecku-wedlug-Pileckiego.html <br>
+        </p>
+        
 
     </main>
     <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
